# FedPrivDedup

./: CMakeCache.txt  CMakeLists.txt  FED联邦学习隐私保护去重框架方案.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  README_FED.md  build.sh  ca.key  ca.pem  ca.srl  cert.pem  cmake_install.cmake  fed_client  fed_server  key.pem  server.csr  test_fed.sh  test_fed_complete.sh  使用文档.md  总文档.md
certs/: server_cert.pem  server_key.pem
output/output_client1/: global_duplicates.txt
output/output_client2/: global_duplicates.txt
src/: lsh.cu  lsh.h  main.cu  param.cu  param.h  util.cpp  util.h
src/fed/: aes_crypto.cpp  aes_crypto.h  audit_logger.cpp  audit_logger.h  auth_manager.cpp  auth_manager.h  client.cpp  client.h  client_main.cpp  crypto.cpp  crypto.h  crypto_cuda.cu  crypto_cuda.h  data_preprocessor.cpp  data_preprocessor.h  decrypt_cuda.cu  decrypt_cuda.h  fed_cuda.cu  fed_cuda.h  params.h  server.cpp  server.h  server_main.cpp  tls_connection.cpp  tls_connection.h  tls_connection_new.cpp  tls_connection_new.h  union_find.cpp  union_find.h
ssl/: ca.pem  ca_key.pem  cert.pem  key.pem
test/: test_fed.sh
test/data/: doc1.txt  doc3.txt
test_data/client1/: test1.jsonl  test_data.jsonl
test_data/client2/: test1.jsonl
test_data_all/test_data_large1/: test1.jsonl
test_data_all/test_data_large2/: test1.jsonl
